padding fix for heading on narrow viewport

--- a/dev/sass/_common/_media.sass
+++ b/dev/sass/_common/_media.sass
@@ -14,9 +14,9 @@
 @media only screen and (min-width: 1300px)		
 	.works-container
 		padding-top: 50px
-@media only screen and (max-device-height: 621px) and (min-width: 1000px)		
+@media only screen and (min-height: 621px) and (min-width: 1001px)		
 	.section__contacts,.section__header
-		padding-top: 50px
+		padding-top: 30px
 @media only screen and (max-width: 1000px)		
 	.wrapper
 		overflow-x: hidden !important
